syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";


option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   // Hash sent via param and awaits server response
   rpc hash(HashRequest) returns (HashResponse);
   rpc validate(ValidatorRequest) returns (google.protobuf.BoolValue);
}
message HashRequest {
   int32 userId = 1;
   string password = 2;
}
message HashResponse{
	int32 userId = 1;
	bytes hashedPassword = 2;
	bytes salt = 3;
}
message ValidatorRequest {
    string password = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}